2008-07-17  Jacob Refstrup  <jacob.refstrup@hp.com>

        Reviewed by rwlbuis@gmail.com

        https://bugs.webkit.org/show_bug.cgi?id=19965

        - Added "@"{ident} rule (below other @-rules) to use flex for longest match
          (if an earlier rule - e.g. @media - also matches then flex chooses that one
           however, if a longer match - e.g. @mediaall matches flex will choose that)
        - Updated grammar to defined ATKEYWORD token and to use that instead of '@'
          in the error recovery grammar. 

        Test: css2.1/atrule_longest_match.html

        * ChangeLog:
        * css/CSSGrammar.y:
        * css/tokenizer.flex:

2008-07-17  David Hyatt  <hyatt@apple.com>

        Make sure the check to see if a frame/iframe is being rendered inside a transparency layer is
        recursive (and checks for transparency layers all the way up the ancestor document chain back to
        the top-level frame).

        Reviewed by Dan

        * rendering/RenderView.cpp:
        (WebCore::RenderView::paintBoxDecorations):

2008-07-16  Jon Honeycutt  <jhoneycutt@apple.com>

        REGRESSION: Can't create windowless plug-in with Flash 9
        https://bugs.webkit.org/show_bug.cgi?id=20070

        Reviewed by Mark Rowe.

        * plugins/win/PluginPackageWin.cpp:
        (WebCore::PluginPackage::determineQuirks): Reverse argument order;
        PlatformModuleVersion constructor takes leastSig, mostSig.

2008-07-16  Eric Seidel  <eric@webkit.org>

        Reviewed by mitz.

        Attempt to make initializeATSUStyle human-readable by
        splitting it out into better-named static inline functions.

        No functional changes, thus no tests.

        * platform/graphics/mac/FontMac.mm:
        (WebCore::fontHasMirroringInfo):
        (WebCore::disableLigatures):
        (WebCore::initializeATSUStyle):

2008-07-16  Eric Seidel  <eric@webkit.org>

        No review, build fix only.

        Attempt to fix Mac build
